// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BettingEngineService golden — analyzeFixture decision output > locks the NO_BET decision when no market odds are available 1`] = `
{
  "deterministicScore": 0.645302,
  "fixtureId": "fixture-id",
  "modelRunId": "run-id",
  "probabilities": {
    "away": 0.107157,
    "bttsNo": 0.578779,
    "bttsYes": 0.421221,
    "cleanSheetAway": 0.1269,
    "cleanSheetHome": 0.517557,
    "dc12": 0.809669,
    "dc1X": 0.892843,
    "dcX2": 0.297488,
    "dnbAway": 0.132347,
    "dnbHome": 0.867653,
    "draw": 0.190331,
    "firstHalfWinner": {
      "away": 0.114707,
      "draw": 0.386589,
      "home": 0.498703,
    },
    "home": 0.702512,
    "htft": {
      "AWAY_AWAY": 0.055276,
      "AWAY_DRAW": 0.033154,
      "AWAY_HOME": 0.026278,
      "DRAW_AWAY": 0.045579,
      "DRAW_DRAW": 0.124032,
      "DRAW_HOME": 0.216978,
      "HOME_AWAY": 0.006309,
      "HOME_DRAW": 0.033154,
      "HOME_HOME": 0.45924,
    },
    "ouHT": {
      "OVER_0_5": 0.698226,
      "OVER_1_5": 0.336677,
      "UNDER_0_5": 0.301774,
      "UNDER_1_5": 0.663323,
    },
    "over15": 0.75548,
    "over25": 0.511987,
    "over35": 0.290977,
    "over45": 0.140524,
    "resultBtts": {
      "AWAY_NO": 0.061222,
      "AWAY_YES": 0.045935,
      "DRAW_NO": 0.065678,
      "DRAW_YES": 0.124652,
      "HOME_NO": 0.451878,
      "HOME_YES": 0.250634,
    },
    "resultTotalGoals": {
      "AWAY_OVER_1_5": 0.063899,
      "AWAY_OVER_2_5": 0.049654,
      "AWAY_OVER_3_5": 0.017118,
      "AWAY_OVER_4_5": 0.010147,
      "AWAY_UNDER_1_5": 0.043258,
      "AWAY_UNDER_2_5": 0.057504,
      "AWAY_UNDER_3_5": 0.090039,
      "AWAY_UNDER_4_5": 0.097011,
      "DRAW_OVER_1_5": 0.124652,
      "DRAW_OVER_2_5": 0.035352,
      "DRAW_OVER_3_5": 0.035352,
      "DRAW_OVER_4_5": 0.004998,
      "DRAW_UNDER_1_5": 0.065678,
      "DRAW_UNDER_2_5": 0.154978,
      "DRAW_UNDER_3_5": 0.154978,
      "DRAW_UNDER_4_5": 0.185333,
      "HOME_OVER_1_5": 0.566928,
      "HOME_OVER_2_5": 0.426982,
      "HOME_OVER_3_5": 0.238507,
      "HOME_OVER_4_5": 0.12538,
      "HOME_UNDER_1_5": 0.135584,
      "HOME_UNDER_2_5": 0.275531,
      "HOME_UNDER_3_5": 0.464005,
      "HOME_UNDER_4_5": 0.577132,
    },
    "secondHalfWinner": {
      "away": 0.1179,
      "draw": 0.320837,
      "home": 0.561263,
    },
    "teamTotalAway": {
      "OVER_0_5": 0.482443,
      "OVER_1_5": 0.141562,
      "OVER_2_5": 0.029303,
      "OVER_3_5": 0.004657,
      "OVER_4_5": 0.000599,
      "OVER_5_5": 0.000065,
      "OVER_6_5": 0.000006,
      "UNDER_0_5": 0.517557,
      "UNDER_1_5": 0.858438,
      "UNDER_2_5": 0.970697,
      "UNDER_3_5": 0.995343,
      "UNDER_4_5": 0.999401,
      "UNDER_5_5": 0.999935,
      "UNDER_6_5": 0.999994,
    },
    "teamTotalHome": {
      "OVER_0_5": 0.8731,
      "OVER_1_5": 0.611131,
      "OVER_2_5": 0.340732,
      "OVER_3_5": 0.154664,
      "OVER_4_5": 0.058636,
      "OVER_5_5": 0.018989,
      "OVER_6_5": 0.005348,
      "UNDER_0_5": 0.1269,
      "UNDER_1_5": 0.388869,
      "UNDER_2_5": 0.659268,
      "UNDER_3_5": 0.845336,
      "UNDER_4_5": 0.941364,
      "UNDER_5_5": 0.981011,
      "UNDER_6_5": 0.994652,
    },
    "under15": 0.24452,
    "under25": 0.488013,
    "under35": 0.709023,
    "under45": 0.859476,
    "winEitherHalfAway": 0.219083,
    "winEitherHalfHome": 0.780063,
    "winToNilAway": 0.061222,
    "winToNilHome": 0.451878,
  },
  "status": "analyzed",
  "valueBet": null,
}
`;

exports[`BettingEngineService golden — analyzeFixture decision output > locks the decision for a strong-home fixture with generous home odds 1`] = `
{
  "deterministicScore": 0.645302,
  "fixtureId": "fixture-id",
  "modelRunId": "run-id",
  "probabilities": {
    "away": 0.107157,
    "bttsNo": 0.578779,
    "bttsYes": 0.421221,
    "cleanSheetAway": 0.1269,
    "cleanSheetHome": 0.517557,
    "dc12": 0.809669,
    "dc1X": 0.892843,
    "dcX2": 0.297488,
    "dnbAway": 0.132347,
    "dnbHome": 0.867653,
    "draw": 0.190331,
    "firstHalfWinner": {
      "away": 0.114707,
      "draw": 0.386589,
      "home": 0.498703,
    },
    "home": 0.702512,
    "htft": {
      "AWAY_AWAY": 0.055276,
      "AWAY_DRAW": 0.033154,
      "AWAY_HOME": 0.026278,
      "DRAW_AWAY": 0.045579,
      "DRAW_DRAW": 0.124032,
      "DRAW_HOME": 0.216978,
      "HOME_AWAY": 0.006309,
      "HOME_DRAW": 0.033154,
      "HOME_HOME": 0.45924,
    },
    "ouHT": {
      "OVER_0_5": 0.698226,
      "OVER_1_5": 0.336677,
      "UNDER_0_5": 0.301774,
      "UNDER_1_5": 0.663323,
    },
    "over15": 0.75548,
    "over25": 0.511987,
    "over35": 0.290977,
    "over45": 0.140524,
    "resultBtts": {
      "AWAY_NO": 0.061222,
      "AWAY_YES": 0.045935,
      "DRAW_NO": 0.065678,
      "DRAW_YES": 0.124652,
      "HOME_NO": 0.451878,
      "HOME_YES": 0.250634,
    },
    "resultTotalGoals": {
      "AWAY_OVER_1_5": 0.063899,
      "AWAY_OVER_2_5": 0.049654,
      "AWAY_OVER_3_5": 0.017118,
      "AWAY_OVER_4_5": 0.010147,
      "AWAY_UNDER_1_5": 0.043258,
      "AWAY_UNDER_2_5": 0.057504,
      "AWAY_UNDER_3_5": 0.090039,
      "AWAY_UNDER_4_5": 0.097011,
      "DRAW_OVER_1_5": 0.124652,
      "DRAW_OVER_2_5": 0.035352,
      "DRAW_OVER_3_5": 0.035352,
      "DRAW_OVER_4_5": 0.004998,
      "DRAW_UNDER_1_5": 0.065678,
      "DRAW_UNDER_2_5": 0.154978,
      "DRAW_UNDER_3_5": 0.154978,
      "DRAW_UNDER_4_5": 0.185333,
      "HOME_OVER_1_5": 0.566928,
      "HOME_OVER_2_5": 0.426982,
      "HOME_OVER_3_5": 0.238507,
      "HOME_OVER_4_5": 0.12538,
      "HOME_UNDER_1_5": 0.135584,
      "HOME_UNDER_2_5": 0.275531,
      "HOME_UNDER_3_5": 0.464005,
      "HOME_UNDER_4_5": 0.577132,
    },
    "secondHalfWinner": {
      "away": 0.1179,
      "draw": 0.320837,
      "home": 0.561263,
    },
    "teamTotalAway": {
      "OVER_0_5": 0.482443,
      "OVER_1_5": 0.141562,
      "OVER_2_5": 0.029303,
      "OVER_3_5": 0.004657,
      "OVER_4_5": 0.000599,
      "OVER_5_5": 0.000065,
      "OVER_6_5": 0.000006,
      "UNDER_0_5": 0.517557,
      "UNDER_1_5": 0.858438,
      "UNDER_2_5": 0.970697,
      "UNDER_3_5": 0.995343,
      "UNDER_4_5": 0.999401,
      "UNDER_5_5": 0.999935,
      "UNDER_6_5": 0.999994,
    },
    "teamTotalHome": {
      "OVER_0_5": 0.8731,
      "OVER_1_5": 0.611131,
      "OVER_2_5": 0.340732,
      "OVER_3_5": 0.154664,
      "OVER_4_5": 0.058636,
      "OVER_5_5": 0.018989,
      "OVER_6_5": 0.005348,
      "UNDER_0_5": 0.1269,
      "UNDER_1_5": 0.388869,
      "UNDER_2_5": 0.659268,
      "UNDER_3_5": 0.845336,
      "UNDER_4_5": 0.941364,
      "UNDER_5_5": 0.981011,
      "UNDER_6_5": 0.994652,
    },
    "under15": 0.24452,
    "under25": 0.488013,
    "under35": 0.709023,
    "under45": 0.859476,
    "winEitherHalfAway": 0.219083,
    "winEitherHalfHome": 0.780063,
    "winToNilAway": 0.061222,
    "winToNilHome": 0.451878,
  },
  "status": "analyzed",
  "valueBet": {
    "ev": "0.5455264976689285",
    "fixtureId": "fixture-id",
    "market": "ONE_X_TWO",
    "modelRunId": "run-id",
    "odds": "2.2",
    "pick": "HOME",
    "pickKey": "ONE_X_TWO|HOME",
    "probability": "0.7025120443949675",
    "qualityScore": "0.35202918950868656854",
    "stakePct": "0.01",
  },
}
`;
